Support for conf files of RuntimeProperties assets